--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #spring.cloud.gcp.project-id=playground-s-11-b82637be
-spring.cloud.gcp.project.id=playground-s-11-861fb61f
-spring.cloud.gcp.topic.id=nad.sit.ord.voip.workorder
-spring.cloud.gcp.subscription.id=nad.sit.ord.voip.workorder-sub
+spring.cloud.gcp.project.id=playground-s-11-900baaf0
+spring.cloud.gcp.topic.id=ord.voip.workorder
+spring.cloud.gcp.subscription.id=ord.voip.workorder-sub
 spring.cloud.gcp.credentials.location=classpath:gcpcreds.json
 spring.cloud.gcp.enable.flowcontrol=true
 spring.cloud.gcp.ack.deadline=60
